--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "ROSBridgePlugin"]
 	path = ROSBridgePlugin
 	url = ./ROSBridgeTest/Plugins/ROSBridgePlugin
+[submodule "ROSBridgeTest/Plugins/ROSBridgePlugin"]
+	path = ROSBridgeTest/Plugins/ROSBridgePlugin
+	url = git@github.com:gnoliyil/ROSBridgePlugin.git
