--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "ROSBridgePlugin"]
-	path = ROSBridgePlugin
-	url = ./ROSBridgeTest/Plugins/ROSBridgePlugin
 [submodule "ROSBridgeTest/Plugins/ROSBridgePlugin"]
 	path = ROSBridgeTest/Plugins/ROSBridgePlugin
+	url = git@github.com:gnoliyil/ROSBridgePlugin.git
+[submodule "ROSBridgePlugin-backup"]
+	path = ROSBridgePlugin
 	url = git@github.com:gnoliyil/ROSBridgePlugin.git
