--- a/ROSBridgeTest/ROSBridgeTest.uproject
+++ b/ROSBridgeTest/ROSBridgeTest.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "ROSBridgeTest",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
