--- a/ROSBridgeTest/ROSBridgeTest.uproject
+++ b/ROSBridgeTest/ROSBridgeTest.uproject
@@ -1,16 +1,13 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{15E5F246-3906-100F-0000-023FD8FEEDEB}",
+	"EngineAssociation": "{74BBE1A8-48F9-C2BE-C924-E28D1CA084BD}",
 	"Category": "",
 	"Description": "",
 	"Modules": [
 		{
 			"Name": "ROSBridgeTest",
 			"Type": "Runtime",
-			"LoadingPhase": "Default",
-			"AdditionalDependencies": [
-				"Engine"
-			]
+			"LoadingPhase": "Default"
 		}
 	]
 }
