--- a/URoboSim.uplugin
+++ b/URoboSim.uplugin
@@ -5,10 +5,10 @@
 	"FriendlyName": "URoboSim",
 	"Description": "",
 	"Category": "RobCoG",
-	"CreatedBy": "",
-	"CreatedByURL": "",
+	"CreatedBy": "Andrei Haidu",
+	"CreatedByURL": "http://haidu.eu",
 	"DocsURL": "https://github.com/robcog-iai/URoboSim",
-	"MarketplaceURL": "http://robcog.org/",
+	"MarketplaceURL": "",
 	"SupportURL": "http://robcog.org/",
 	"CanContainContent": true,
 	"IsBetaVersion": false,
